Added steps and ingredients

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,26 @@
     <body>
         <h1>Pineapple chicken recipe</h1>
         <img src="img/pc.jpg" alt="Pineapple Chicken">
+        <h2>Description</h2>
+        <p>Colorful pantry staples come together to 
+            make this aromatic and flavorful pineapple chicken 
+            that has the perfect balance of sweet and sour
+            to brighten your day! {Gluten-Free Adaptable}</p>
+        <h2>Ingrediends</h2>
+        <ul>
+            <li>Chicken</li>
+            <li>Pineapple</li>
+            <li>bell papers</li>
+            <li>ginger and sauce</li>
+        </ul> 
+        <h2>Cooking Process</h2>
+        <ol>
+            <li>Coat the marinated chicken with cornstarch</li>
+            <li>Pan fry the chicken with the thin layer of oil</li>
+            <li>briefly cook veggies</li>
+            <li>Thicken the sauce and add back cooked chicken</li>
+        </ol>  
+
         <h1>burger</h1>
         <h1>momo</h1>
         <h1>sel</h1>
